--- a/public/documentation.html
+++ b/public/documentation.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
           <td>Return data about a director by name.</td>
-          <td>/movies/director/[name]</td>
+          <td>/directors/[name]</td>
           <td>get</td>
           <td>None</td>
           <td>JSON object holding data about the director including bio, birth year, and death year.</td>
