--- a/public/documentation.html
+++ b/public/documentation.html
@@ -71,21 +71,21 @@
         </tr>
         <tr>
           <td>Allow users to update their user info.</td>
-          <td>/users/[username]</td>
+          <td>/users/[Username]</td>
           <td>put</td>
           <td>A JSON object holding data to update.</td>
           <td>A JSON object holding the updated user.</td>
         </tr>
         <tr>
           <td>Allow users to add a movie to their list of favorites.</td>
-          <td>/users/[username]/movies/[MovieID]</td>
+          <td>/users/[username]/favorites/[MovieID]</td>
           <td>post</td>
           <td>None</td>
           <td>A JSON object holding the updated user.</td>
         </tr>
         <tr>
           <td>Allow users to remove a movie from their list of favorites.</td>
-          <td>/users/[username]/movies/[MovieID]</td>
+          <td>/users/[username]/favorites/[MovieID]</td>
           <td>delete</td>
           <td>None</td>
           <td>A JSON object holding the updated user.</td>
